# cutlass_demo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  doublebuffer.cu  simple.cu
cuda-core/: CMakeLists.txt  build.sh  main.cu
cuda-core/CUDACore/: CMakeLists.txt  FlashAttention.cu  GEMM.cu  GEMM_TensorCore.cu  GEMM_cuBlas.cu  GEMV.cu  ReSize.cu  Reduce.cu  SGEMV.cu  SIMD_VecSum.cu  SPMM.cu  SPMM_Flesible.cu  SPMM_TensorCore.cu  SPMM_cuSparse.cu  SPMV_BSR.cu  SPMV_CSR.cu  Sort.cu  Transpose.cu  WinogradSparse.cu
cuda-core/Tensor/: Matrix.cpp
cuda-core/include/: Kernel.h
fa/: CMakeLists.txt  compile.sh
fa/include/: CMakeLists.txt  block_info.h  hstu.h  hstu_api.cpp  hstu_fwd.h  hstu_instantiations.cu  hstu_mask.h  hstu_mfalcon.h  kernel_traits.h  static_switch.h  utils.h
fa/python_lib/: hstu.py  test.ipynb
fa/test/: mfalcon_test.cpp
fa/test/include/: hstu_api.h
tensor-core/: CMakeLists.txt
tensor-core/fp8/: CMakeList.txt  CMakeLists.txt  build.sh  gemm_fp8.cuh  main.cu
tensor-core/include/: gemm.simple.cu  gemm_boundary_check.cuh  gemm_double_boundary_check.cuh  gemm_double_buffer.cu  gemm_double_buffer.cuh  gemm_multi_stage.cu  gemm_multi_stage.cuh  gemm_opt_final.cuh  gemm_simple.cuh  utils.cuh
tensor-core/sm90/: CMakeLists.txt  DEVLOG.md  SM90_GEMM_OPTIMIZATION_GUIDE.md  analysis.sh  build.sh  gemm_sm90.cuh  main.cu  remote-ssh.txt
tensor-core/sm90/detail/: config.cuh  kernel_2wg_tma_store.cuh  kernel_cp_async.cuh  kernel_pingpong.cuh  kernel_pingpong_cluster.cuh  kernel_pingpong_persistent.cuh  kernel_tma.cuh  mbarrier.cuh
tensor-core/sm90/log/: log.txt
tensor-core/sm90/profile_reports/: baseline.txt  cuobjdump.txt  gemm_sm90.nsys-rep  gemm_sm90.sqlite  nsys_stats.txt  summary.txt
tensor-core/sm90_fp8/: CMakeLists.txt  DEVLOG.md  gemm_fp8_sm90.cuh  main_fp8.cu
tensor-core/sm90_fp8/detail/: config_fp8.cuh  kernel_fp8_persistent.cuh  kernel_fp8_pingpong.cuh  kernel_fp8_tma.cuh  mbarrier.cuh
tensor-core/src/: main.cu
tensor-core/utils/: utils.cuh
